[gd_scene load_steps=5 format=3 uid="uid://bfwik7j6xmwrq"]

[ext_resource type="PackedScene" uid="uid://ki08mjslq50j" path="res://scenes/ability_node.tscn" id="1_adbc8"]
[ext_resource type="Script" uid="uid://qr21rx0f0bya" path="res://scenes/upgrade_screen.gd" id="1_scxlh"]
[ext_resource type="Resource" uid="uid://bhikku16bb8vy" path="res://resources/clockwork_mainspring.tres" id="3_3vsiv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scxlh"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scxlh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level : 0"

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HP : 0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="CenterNode" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ClockworkMainspring" parent="MarginContainer/VBoxContainer/CenterNode" instance=ExtResource("1_adbc8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 0
ability_resrouce = ExtResource("3_3vsiv")

[node name="TakeDamageButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_scxlh")
text = "Take Damage"

[connection signal="pressed" from="MarginContainer/TakeDamageButton" to="." method="_on_take_damage_button_pressed"]
